# pde_lib

./: README.md  pyproject.toml  test.py
pde_lib/calculation/: pde.py
pde_lib/display/: graph.py
tests/: test_euler.py  test_pde.py
