[tool.poetry]
name = "pde-lib"
version = "0.2.0"
description = ""
authors = ["BTozier <BenjaminATozier@gmail.com>"]
readme = "README.md"
packages = [{include = "pde_lib"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24"
matplotlib = "^3.7.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
